# blesstest

./: .pre-commit-config.yaml  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml  test_watch.sh
examples/a_plus_b/: conftest.py  test_add.py  test_cases.blesstest.json
examples/a_plus_b/blessed/: add_happy_path.json  add_negatives.json  test_cases_negatives.json  test_my_harness_negatives.json
examples/identity/: conftest.py  identity.blesstest.json  identity.blesstest.jsonc  test_idenitity.py  test_identity_cases.blesstest.json
examples/identity/blessed/: identity.blesstest.jsonc_b_variations__b_123456789012345678901234567890.json  identity.blesstest.jsonc_b_variations__b_123456789012345678901234567890__L0T.json  identity.blesstest.jsonc_b_variations__b_2.json  identity.blesstest.jsonc_deep_variations__b_10.json  identity.blesstest.jsonc_happy_path_with_big_b.json  identity_2_param_variations__a_1__b_2.json  identity_2_param_variations__a_3__b_4.json  identity_b_variations__b_123456789012345678901234567890.json  identity_b_variations__b_123456789012345678901234567890__L0T.json  identity_b_variations__b_123456789012345678901234567890__vS6.json  identity_cartesian_product__a_1__b_3.json  identity_cartesian_product__a_2__b_3.json  identity_child_of_abstract_with_variations__a_2.json  identity_deep_variations__b_10.json  identity_deep_variations__b_20.json  identity_deep_variations__b_20__a_3.json  identity_deep_variations__b_20__a_is_3.json  identity_deep_variations__b_20__a_is_3__b_200.json  identity_happy_path_with_big_b.json  identity_other_harness.json  identity_other_harness__identity_3.json  identity_param_variations__a_1.json  identity_param_variations_cartesian_product__a_1__b_1.json  identity_param_variations_cartesian_product__a_2__b_1.json  identity_param_variations_cartesian_product__a_2__b_2.json
examples/visidata-viewer/: conftest.py  diff.patch  diff.py  visidata.blesstest.jsonc  visidata_plugin.py
examples/visidata-viewer/blessed/: visidata_small_diffs.json
src/blesstest/: __init__.py  decorator.py  git_utils.py  preprocessing.py
src/blesstest/meta_tests/: collect.blesstest.jsonc  conftest.py
(+9 files in other folders)
