[project]
name = "blesstest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yonatan Cale", email = "myselfandfredy@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "json5>=0.12.0",
    "pydantic>=2.11.3",
    "pytest>=8.3.5",
]

[project.scripts]
testing-framework = "testing_framework:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest-watcher>=0.4.3",
]
