[project]
name = "blesstest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yonatan Cale", email = "myselfandfredy@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.3",
    "pyjson5>=1.6.8",
    "pytest>=8.3.5",
    "visidata>=3.1.1",
]

[project.scripts]
testing-framework = "testing_framework:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest-watcher>=0.4.3",
]

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict = true
disallow_untyped_calls = false
disallow_any_generics = false
